website updates and start on updating to bootstrap4

--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
 		</div>
 
 		<div class="fwb-logos-all">
-			<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
-			<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
-			<a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
+			<a href="http://www.uwec.edu/recreation"><img src="images/recreation.png"></a>
+			<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lions.png"></a>
+			<a href="http://blugolds.com/landing/index"><img src="images/athletics.png"></a>
+			<hr class="logo-rule">
 		</div>
 
 		</section>
