--- a/index.html
+++ b/index.html
@@ -87,14 +87,27 @@
 
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
-							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
-								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
-									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
-			</div>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+							<img src="images/twitter.png" class="twitter">
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook">
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub">
+						</a>
+					</li>
+				</ul>
+			</div> <!-- /.navbar-collapse -->
+		</div>
 			<!-- /.container -->
 	</nav>
 </head>
@@ -171,11 +184,11 @@
 		</div>
 
 		<div class="fwb-logos-all">
-			<a href="http://www.uwec.edu/recreation"><img src="images/recreation.png"></a>
-			<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lions.png"></a>
-			<a href="http://blugolds.com/landing/index"><img src="images/athletics.png"></a>
-			<hr class="logo-rule">
+																					<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
+																					<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
+		  <a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
 		</div>
+
 
 		</section>
 		<section id="content">
