Fix for subway image

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <img src="images/sponsors/ford.png" class="img-fluid title-sponsor" alt="Ford">
         </div>
         <div class="col-md-4 text-center">
-          <img src="images/sponsors/subway.png" class="img-fluid title-sponsor" alt="Subway">
+          <img src="images/sponsors/Subway.png" class="img-fluid title-sponsor" alt="Subway">
         </div>
       </div>
       <div class="row mx-6">
