--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="pastResults.html">Past Results</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="gallery.html">Gallery</a>
+              <a class="dropdown-item disabled" href="#">Gallery</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="assets/2018_Rules_of_the_Tournament.pdf">Rules</a>
               <div class="dropdown-divider"></div>
