--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
         </ul>
         <ul class="navbar-nav ml-auto d-inline-block">
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="#"><img src="images/lclub.png" class="social-media" alt="Lions Club"/></a>
+            <a class="nav-link " href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lclub.png" class="social-media" alt="Lions Club"/></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="#"><img src="images/instagram.png" class="social-media" alt="Instagram"/></a>
+            <a class="nav-link " href="https://instagram.com/UWEC_Recreation/"><img src="images/instagram.png" class="social-media" alt="Instagram"/></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="#"><img src="images/twitter.png" class="social-media" alt="Twitter"/></a>
+            <a class="nav-link " href="https://twitter.com/uwecrecreation/"><img src="images/twitter.png" class="social-media" alt="Twitter"/></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="#"><img src="images/facebook.png" class="social-media" alt="Facebook"/></a>
+            <a class="nav-link " href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522/"><img src="images/facebook.png" class="social-media" alt="Facebook"/></a>
           </li>
         </ul>
       </div>
