--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     </nav>
   </div>
-  <div class="container">
+  <div class="container px-4">
     <div class="row">
       <div class="col-md-12">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -152,9 +152,17 @@
     <div class="text-center">
       <h5 class="headers brand-blue">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h5>
       <h1 class="headers brand-blue"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
-      <a href="http://www.uwec.edu/recreation"><img src="images/recreation2.png" class="logo" alt="Recreation"></a>
-      <a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lions2.png" class="logo" alt="Lions Club"></a>
-      <a href="http://blugolds.com/landing/index"><img src="images/athletics2.png" class="logo" alt="Athletics"></a>
+      <div class="row justify-content-center">
+        <div class="col-3">
+          <a href="http://www.uwec.edu/recreation"><img src="images/recreation2.png" class=" logo img-fluid" alt="Recreation"></a>
+        </div>
+        <div class="col-3">
+          <a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lions2.png" class=" logo img-fluid" alt="Lions Club"></a>
+        </div>
+        <div class="col-3">
+          <a href="http://blugolds.com/landing/index"><img src="images/athletics2.png" class=" logo img-fluid" alt="Athletics"></a>
+        </div>
+      </div>
       <hr class="logo-rule">
     </div>
 
