--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
       <h5 class="headers brand-blue">UWEC Recreation, Blugold Athletics, and the Lake Wissota Lions Club presents:</h5>
       <h1 class="headers brand-blue"><b>6th Annual JIG'S UP Blugold Ice Fishing Contest</b></h1>
       <div class="row justify-content-center">
-        <div class="col-4">
+        <div class="col-4 col-md-3">
           <a href="http://www.uwec.edu/recreation"><img src="images/recreation2.png" class=" logo img-fluid " alt="Recreation"></a>
         </div>
-        <div class="col-4">
+        <div class="col-4 col-md-3">
           <a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lions2.png" class="logo img-fluid" alt="Lions Club"></a>
         </div>
-        <div class="col-4">
+        <div class="col-4 col-md-3">
           <a href="http://blugolds.com/landing/index"><img src="images/athletics2.png" class="logo img-fluid" alt="Athletics"></a>
         </div>
       </div>
