select mega to 'Select Mega: CO-OP Holiday Stations'

--- a/indexOld.html
+++ b/indexOld.html
@@ -87,13 +87,10 @@
 
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter">
-						</a>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter">
+							</a>
 					</li>
 					<li>
 						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
@@ -108,7 +105,7 @@
 				</ul>
 			</div> <!-- /.navbar-collapse -->
 		</div>
-			<!-- /.container -->
+		<!-- /.container -->
 	</nav>
 </head>
 
@@ -184,9 +181,9 @@
 		</div>
 
 		<div class="fwb-logos-all">
-																					<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
-																					<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
-		  <a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
+			<a href="http://www.uwec.edu/recreation"><img src="images/rec.png" class="fwb-logos"></a>
+			<a href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lw.png" class="fwb-logos-lw"></a>
+			<a href="http://blugolds.com/landing/index"><img src="images/athletics.png" class="fwb-logos-ath"></a>
 		</div>
 
 
@@ -237,7 +234,7 @@
 								</li>
 								<li>Scheels (bait available) <font color="red">*</font>
 								</li>
-								<li>Select Mega Holiday Stations</li>
+								<li>Select Mega: CO-OP Holiday Stations</li>
 								<li>Eau Claire Ford</li>
 								<li>Jacobson’s Hardware (bait available)</li>
 								<li>UWEC Recreation <font color="red">*</font>
