--- a/tickets.html
+++ b/tickets.html
@@ -157,7 +157,7 @@
 					</li>
 					<li>Scheels (bait available) <font color="red">*</font>
 					</li>
-					<li>Select Mega Holiday Stations</li>
+					<li>Select Mega: CO-OP Holiday Stations</li>
 					<li>Eau Claire Ford</li>
 					<li>Jacobson’s Hardware (bait available)</li>
 					<li>UWEC Recreation <font color="red">*</font>
