--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -33,6 +33,7 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 </head>
+
 <body>
   <div class="container sticky-top">
     <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom border-right border-left rounded-bottom mb-4">
@@ -57,7 +58,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="schedule.html">Schedule</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
+              <a class="dropdown-item brand-blue" href="lodging.html">Lodging</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item brand-blue" href="pastResults.html">Past Results</a>
               <div class="dropdown-divider"></div>
@@ -83,16 +84,16 @@
         </ul>
         <ul class="navbar-nav ml-auto d-inline-block">
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lclub.png" class="social-media" alt="Lions Club"/></a>
+            <a class="nav-link " href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="images/lclub.png" class="social-media" alt="Lions Club" /></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="https://instagram.com/UWEC_Recreation/"><img src="images/instagram.png" class="social-media" alt="Instagram"/></a>
+            <a class="nav-link " href="https://instagram.com/UWEC_Recreation/"><img src="images/instagram.png" class="social-media" alt="Instagram" /></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="https://twitter.com/uwecrecreation/"><img src="images/twitter.png" class="social-media" alt="Twitter"/></a>
+            <a class="nav-link " href="https://twitter.com/uwecrecreation/"><img src="images/twitter.png" class="social-media" alt="Twitter" /></a>
           </li>
           <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
-            <a class="nav-link " href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522/"><img src="images/facebook.png" class="social-media" alt="Facebook"/></a>
+            <a class="nav-link " href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522/"><img src="images/facebook.png" class="social-media" alt="Facebook" /></a>
           </li>
         </ul>
       </div>
@@ -181,10 +182,14 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li><h5><b>Weigh-In Stations:</b></h5></li>
+              <li>
+                <h5><b>Weigh-In Stations:</b></h5>
+              </li>
               <li>The View on Lake Wissota</li>
               <li class="mb-3">The Edge Pub & Eatery</li>
-              <li><h5><b>Prize Distribution</b></h5></li>
+              <li>
+                <h5><b>Prize Distribution</b></h5>
+              </li>
               <li>The View on Lake Wissota starting at 3pm</li>
             </ul>
           </div>
@@ -195,9 +200,12 @@
           </div>
           <div class="col-12 p-0">
             <ul class="bulletless-grey">
-              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets! Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th place so even a small fish can win big! </li>
-              <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets at the weigh-in stations (value $16). </li>
-              <li class="mb-2">Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
+              <li class="mb-2">Over $80,000 in cash and prizes including a 2-year lease on a <b>2019 Ford F150 Truck</b> drawn from all registered Fish Tickets! Prizes awarded to the top 25 fish and every 5th place thereafter by weight to 300th
+                place so even a small fish can win big! </li>
+              <li class="mb-2"><b>Each participant may register one fish per ticket;</b> tickets are $25 with no limit on the number of tickets an individual can purchase. Everyone who registers a fish may request two free Blugold Football Tickets
+                at the weigh-in stations (value $16). </li>
+              <li class="mb-2">Raffle prizes include a <b>2019 Polaris Sportsman 450 4-wheeler</b>, raffle tickets are $5 each or 5 for $20! $100 Gift card prizes for the top fish by weight in each category: northern, walleye, and pan fish. "The One
+                that Got Away" drawing from all Fish Ticket holders that did not register a fish, turn in Fish Ticket stub at the Prize Table at The View by 2:30pm.</li>
             </ul>
           </div>
         </div>
@@ -210,7 +218,7 @@
             <ul class="bulletless-grey">
               <li>Online at jigsup.org <span style="color:red">*</span></li>
               <li>Scheels (bait available) <span style="color:red">*</span></li>
-              <li>Select Mega Holiday Stations</li>
+              <li>Select Mega: CO-OP Holiday Stations</li>
               <li>Eau Claire Ford</li>
               <li>Jacobson's Hardware (bait available)</li>
               <li>UWEC Recreation <span style="color:red">*</span></li>
@@ -302,8 +310,9 @@
       </div>
     </div>
   </div>
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
 </html>
