Fixing the website

--- a/lodging.html
+++ b/lodging.html
@@ -86,15 +86,29 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
-							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
-								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
-									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+							<img src="images/twitter.png" class="twitter" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+						</a>
+					</li>
+				</ul>
 			</div>
-			<!-- /.container -->
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container -->
 	</nav>
 </head>
 
@@ -103,16 +117,16 @@
 		<section id="content">
 			<div class="container">
 				<div class="row">
-					<br />
-					<!-- BREAK -->
-					<br />
-					<!-- BREAK -->
-					<br />
-					<!-- BREAK -->
-					<br />
-					<!-- BREAK -->
-					<h2 class="headers">Lodging</h2>
-					<br />
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<br />
+						<!-- BREAK -->
+						<h2 class="headers">Lodging</h2>
+						<br/>
 				</div>
 				<div class="row">
 
@@ -132,14 +146,14 @@
 					</div>
 				</div>
 				-->
-					<div class="row">
-						<h2 class="headers">Hotels & Motels in Eau Claire</h2>
-						<br />
-						<p>
-							Eau Claire has plenty of hotels and motels, with plenty of amenities, in plenty of locations.
-							Want to be on the North side of the city? How about right smack dab in the
-							<a href="https://www.visiteauclaire.com/plan/maps" target="_blank">middle of downtown</a>? We have a place just for you.
-						</p>
+				<div class="row">
+					<h2 class="headers">Hotels & Motels in Eau Claire</h2>
+					<br/>
+					<p>
+						Eau Claire has plenty of hotels and motels, with plenty of amenities, in plenty of locations.
+						Want to be on the North side of the city? How about right smack dab in the
+						<a href="https://www.visiteauclaire.com/plan/maps" target="_blank">middle of downtown</a>? We have a place just for you.
+					</p>
 
 						<p>
 							There are a variety of hotels in Eau Claire as well as, motels, inns and B&B’s to make your next trip to this region a unique and special experience.
@@ -153,47 +167,20 @@
 						<p>
 							Visit our lodging page <a href="https://www.visiteauclaire.com/hotels/hotels-motels/" target="_blank">here</a> for a complete list of hotels available.
 						</p>
-					</div>
-		</section>
+				</div>
+			</section>
 
-		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<!-- Include all compiled plugins (below), or include individual files as needed -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-		<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-		<script src="js/main.js" type="text/javascript"></script>
-	</div>
-</body>
+			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+			<!-- Include all compiled plugins (below), or include individual files as needed -->
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+			<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+			<script src="js/main.js" type="text/javascript"></script>
+		</div>
+	</body>
 
-<footer>
-	<div class="footer hidden-xs">
-		<div class="sponsorBar">
-			<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
-			<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
-			<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
-		</div>
-		<div class="sponsorBar">
-			<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
-			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-			<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
-			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
-			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
-			<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-		</div>
-		<div class="sponsorBar">
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
-			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
-			<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
-		</div>
-		<p>
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-		</p>
-	</div>
-	<div class="footer visible-xs">
-		<p class="small-footer">
+	<footer>
+		<div class="footer hidden-xs">
 			<div class="sponsorBar">
 				<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
 				<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
@@ -212,14 +199,41 @@
 				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
 				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
 				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"></a>
 				<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
 			</div>
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br />
-			<!-- BREAK -->
-		</p>
-	</div>
-</footer>
+			<p>
+				Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+			</p>
+		</div>
+		<div class="footer visible-xs">
+			<p class="small-footer">
+				<div class="sponsorBar">
+					<a href="http://www.scheels.com" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/scheels.png" alt="Scheels"></a>
+					<a href="http://www.eauclaireford.com/" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/ford.png" alt="Ford"></a>
+					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="sponsorBarTitleImg" src="images/sponsors/Subway.png" alt="Subway"></a>
+				</div>
+				<div class="sponsorBar">
+					<a href="http://www.weau.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
+					<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+					<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+					<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+					<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+				</div>
+				<div class="sponsorBar">
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+					<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+					<a href="https://www.aceautomall.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+				</div>
+				Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+				<br />
+				<!-- BREAK -->
+			</p>
+		</div>
+	</footer>
 
-</html>
+	</html>
