--- a/prizes.html
+++ b/prizes.html
@@ -86,115 +86,129 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
-							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
-								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
-									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+							<img src="images/twitter.png" class="twitter" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+						</a>
+					</li>
+				</ul>
 			</div>
-			<!-- /.container -->
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container -->
 	</nav>
 </head>
 
 <body>
 	<div class="wrapper>" <br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
-	<section id="prizeGrid">
+		<!-- BREAK -->
+		<br />
+		<!-- BREAK -->
+		<section id="prizeGrid">
+			<!-- Images must be 400x300 -->
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<h2 class="headers">Prizes</h2>
+						<h3 class="headers">2018 Prize List</h3>
+						<div class="bs-example1">
+							<div id="myCarousel" class="carousel slide" data-ride="carousel1">
+								<!-- Wrapper for carousel items -->
+								<div class="carousel-inner">
+									<div class="item active">
+										<img src="images/prizes/crop_prize.PNG" alt="First Slide">
+									</div>
+								</div>
+								<!-- Carousel controls -->
+								<a class="carousel-control left" href="#myCarousel" data-slide="prev">
+									<span class="glyphicon glyphicon-chevron-left"></span>
+								</a>
+								<a class="carousel-control right" href="#myCarousel" data-slide="next">
+									<span class="glyphicon glyphicon-chevron-right"></span>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+
 		<!-- Images must be 400x300 -->
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<h2 class="headers">Prizes</h2>
-					<h3 class="headers">2018 Prize List</h3>
-					<div class="bs-example1">
-						<div id="myCarousel" class="carousel slide" data-ride="carousel1">
-							<!-- Wrapper for carousel items -->
-							<div class="carousel-inner">
-								<div class="item active">
-									<img src="images/prizes/crop_prize.PNG" alt="First Slide">
+			<div class="panel panel-default">
+				<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							Fish Prize List 2019
+						</h4>
+						<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+					</div>
+				</a>
+				<div id="collapse3" class="panel-collapse collapse ">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="table-responsive">
+									<h4>Available in January</h4>
 								</div>
 							</div>
-							<!-- Carousel controls -->
-							<a class="carousel-control left" href="#myCarousel" data-slide="prev">
-								<span class="glyphicon glyphicon-chevron-left"></span>
-							</a>
-							<a class="carousel-control right" href="#myCarousel" data-slide="next">
-								<span class="glyphicon glyphicon-chevron-right"></span>
-							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-
-
-	<!-- Images must be 400x300 -->
-	<div class="container">
-		<div class="panel panel-default">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						Fish Prize List 2019
-					</h4>
-					<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-				</div>
-			</a>
-			<div id="collapse3" class="panel-collapse collapse ">
-				<div class="panel-body">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="table-responsive">
-								<h4>Available in January</h4>
+			<div class="panel panel-default">
+				<a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							Raffle Prize List 2019
+						</h4>
+						<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+					</div>
+				</a>
+				<div id="collapse4" class="panel-collapse collapse ">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="table-responsive">
+									<h4>Available in January</h4>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="panel panel-default">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						Raffle Prize List 2019
-					</h4>
-					<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-				</div>
-			</a>
-			<div id="collapse4" class="panel-collapse collapse ">
-				<div class="panel-body">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="table-responsive">
-								<h4>Available in January</h4>
-							</div>
-						</div>
+			<div class="panel panel-default">
+				<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+					<div class="panel-heading">
+						<h4 class="panel-title">
+							Fish Prize List 2018
+						</h4>
+						<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
 					</div>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default">
-			<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-				<div class="panel-heading">
-					<h4 class="panel-title">
-						Fish Prize List 2018
-					</h4>
-					<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-				</div>
-			</a>
-			<div id="collapse1" class="panel-collapse collapse ">
-				<div class="panel-body">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="table-responsive">
-								<table class="table">
-									<tbody>
-										<th>Place</th>
-										<th>Prize</th>
+				</a>
+				<div id="collapse1" class="panel-collapse collapse ">
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-lg-12">
+								<div class="table-responsive">
+									<table class="table">
+										<tbody>
+											<th>Place</th>
+											<th>Prize</th>
 										</tr>
 										<tr>
 											<td>1</td>
@@ -542,200 +556,200 @@
 									<tbody>
 										<th>Place</th>
 										<th>Prize</th>
-										</tr>
-										<tr>
-											<td>1</td>
-											<td>Xtreme Motorsports- 2017 Polaris Sportsman 450 4-Wheeler</td>
-										</tr>
-										<tr>
-											<td>2</td>
-											<td>Bradley 6-Rack Digital Meat Smoker- Scheels</td>
-										</tr>
-										<tr>
-											<td>3</td>
-											<td>$500 Gift Card- Scheels</td>
-										</tr>
-										<tr>
-											<td>4</td>
-											<td>Paddleboard and Paddle- Scheels</td>
-										</tr>
-										<tr>
-											<td>5</td>
-											<td>Ice Pro Fish Sonar- Scheels</td>
-										</tr>
-										<tr>
-											<td>6</td>
-											<td>Gift Certificate- Mole Lake Casino</td>
-										</tr>
-										<tr>
-											<td>7</td>
-											<td>Vexilar Prize Package</td>
-										</tr>
-										<tr>
-											<td>8</td>
-											<td>$25 Gift Certificate-The View</td>
-										</tr>
-										<tr>
-											<td>9</td>
-											<td>Visit Eau Claire Gift Basket</td>
-										</tr>
-										<tr>
-											<td>10</td>
-											<td>I Fish Pro Tip up</td>
-										</tr>
-										<tr>
-											<td>11</td>
-											<td>Vexilar Prize Package</td>
-										</tr>
-										<tr>
-											<td>12</td>
-											<td>$25 Gift Certificate-The View</td>
-										</tr>
-										<tr>
-											<td>13</td>
-											<td>Dangler Tip up/Trip up</td>
-										</tr>
-										<tr>
-											<td>14</td>
-											<td>Gift Certificate- The Edge</td>
-										</tr>
-										<tr>
-											<td>15</td>
-											<td>$100 Gift Card -Scheels</td>
-										</tr>
-										<tr>
-											<td>16</td>
-											<td>Gift Certificate - North Star Casino Resort</td>
-										</tr>
-										<tr>
-											<td>17</td>
-											<td>Adirondack Chair - General Beer</td>
-										</tr>
-										<tr>
-											<td>18</td>
-											<td>I Fish Pro Tip up</td>
-										</tr>
-										<tr>
-											<td>19</td>
-											<td>Vexilar Prize Package</td>
-										</tr>
-										<tr>
-											<td>20</td>
-											<td>Pizza Party-The View</td>
-										</tr>
-										<tr>
-											<td>21</td>
-											<td>Green Bay Packers Prize Package</td>
-										</tr>
-										<tr>
-											<td>22</td>
-											<td>Gift Certificate - LCO Casino and Lodge</td>
-										</tr>
-										<tr>
-											<td>23</td>
-											<td>Paddle - General Beer</td>
-										</tr>
-										<tr>
-											<td>24</td>
-											<td>Steak Package- Sodexo</td>
-										</tr>
-										<tr>
-											<td>25</td>
-											<td>Vexilar Prize Package</td>
-										</tr>
-										<tr>
-											<td>26</td>
-											<td>$150 Gift Certificate - McQuoid's Inn and Event Center</td>
-										</tr>
-										<tr>
-											<td>27</td>
-											<td>Eau Claire Express Prize Package</td>
-										</tr>
-										<tr>
-											<td>28</td>
-											<td>St. Croix Fishing Rod- Xcel Energy</td>
-										</tr>
-										<tr>
-											<td>29</td>
-											<td>Gift Certificate - Fon du Lac Band of Lake Superior Chippewa</td>
-										</tr>
-										<tr>
-											<td>30</td>
-											<td>Steak Package -Sodexo</td>
-										</tr>
-										<tr>
-											<td>31</td>
-											<td>Green Bay Packers Prize Package</td>
-										</tr>
-										<tr>
-											<td>32</td>
-											<td>Gift Certificate - Lake of the Torches</td>
-										</tr>
-										<tr>
-											<td>33</td>
-											<td>Vexilar Prize Package</td>
-										</tr>
-										<tr>
-											<td>34</td>
-											<td>BluGold Volleyball Package</td>
-										</tr>
-										<tr>
-											<td>35</td>
-											<td>BluGold Basketball Package</td>
-										</tr>
-										<tr>
-											<td>36</td>
-											<td>BluGold Cross Country/Sandbar and Grill Prize Package</td>
-										</tr>
-										<tr>
-											<td>37</td>
-											<td>BluGold Volleyball/Sandbar and Grill Prize Package</td>
-										</tr>
-										<tr>
-											<td>38</td>
-											<td>BluGold Basketball Package</td>
-										</tr>
-										<tr>
-											<td>39</td>
-											<td>Gift Certificate - The Edge</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
+									</tr>
+									<tr>
+										<td>1</td>
+										<td>Xtreme Motorsports- 2017 Polaris Sportsman 450 4-Wheeler</td>
+									</tr>
+									<tr>
+										<td>2</td>
+										<td>Bradley 6-Rack Digital Meat Smoker- Scheels</td>
+									</tr>
+									<tr>
+										<td>3</td>
+										<td>$500 Gift Card- Scheels</td>
+									</tr>
+									<tr>
+										<td>4</td>
+										<td>Paddleboard and Paddle- Scheels</td>
+									</tr>
+									<tr>
+										<td>5</td>
+										<td>Ice Pro Fish Sonar- Scheels</td>
+									</tr>
+									<tr>
+										<td>6</td>
+										<td>Gift Certificate- Mole Lake Casino</td>
+									</tr>
+									<tr>
+										<td>7</td>
+										<td>Vexilar Prize Package</td>
+									</tr>
+									<tr>
+										<td>8</td>
+										<td>$25 Gift Certificate-The View</td>
+									</tr>
+									<tr>
+										<td>9</td>
+										<td>Visit Eau Claire Gift Basket</td>
+									</tr>
+									<tr>
+										<td>10</td>
+										<td>I Fish Pro Tip up</td>
+									</tr>
+									<tr>
+										<td>11</td>
+										<td>Vexilar Prize Package</td>
+									</tr>
+									<tr>
+										<td>12</td>
+										<td>$25 Gift Certificate-The View</td>
+									</tr>
+									<tr>
+										<td>13</td>
+										<td>Dangler Tip up/Trip up</td>
+									</tr>
+									<tr>
+										<td>14</td>
+										<td>Gift Certificate- The Edge</td>
+									</tr>
+									<tr>
+										<td>15</td>
+										<td>$100 Gift Card -Scheels</td>
+									</tr>
+									<tr>
+										<td>16</td>
+										<td>Gift Certificate - North Star Casino Resort</td>
+									</tr>
+									<tr>
+										<td>17</td>
+										<td>Adirondack Chair - General Beer</td>
+									</tr>
+									<tr>
+										<td>18</td>
+										<td>I Fish Pro Tip up</td>
+									</tr>
+									<tr>
+										<td>19</td>
+										<td>Vexilar Prize Package</td>
+									</tr>
+									<tr>
+										<td>20</td>
+										<td>Pizza Party-The View</td>
+									</tr>
+									<tr>
+										<td>21</td>
+										<td>Green Bay Packers Prize Package</td>
+									</tr>
+									<tr>
+										<td>22</td>
+										<td>Gift Certificate - LCO Casino and Lodge</td>
+									</tr>
+									<tr>
+										<td>23</td>
+										<td>Paddle - General Beer</td>
+									</tr>
+									<tr>
+										<td>24</td>
+										<td>Steak Package- Sodexo</td>
+									</tr>
+									<tr>
+										<td>25</td>
+										<td>Vexilar Prize Package</td>
+									</tr>
+									<tr>
+										<td>26</td>
+										<td>$150 Gift Certificate - McQuoid's Inn and Event Center</td>
+									</tr>
+									<tr>
+										<td>27</td>
+										<td>Eau Claire Express Prize Package</td>
+									</tr>
+									<tr>
+										<td>28</td>
+										<td>St. Croix Fishing Rod- Xcel Energy</td>
+									</tr>
+									<tr>
+										<td>29</td>
+										<td>Gift Certificate - Fon du Lac Band of Lake Superior Chippewa</td>
+									</tr>
+									<tr>
+										<td>30</td>
+										<td>Steak Package -Sodexo</td>
+									</tr>
+									<tr>
+										<td>31</td>
+										<td>Green Bay Packers Prize Package</td>
+									</tr>
+									<tr>
+										<td>32</td>
+										<td>Gift Certificate - Lake of the Torches</td>
+									</tr>
+									<tr>
+										<td>33</td>
+										<td>Vexilar Prize Package</td>
+									</tr>
+									<tr>
+										<td>34</td>
+										<td>BluGold Volleyball Package</td>
+									</tr>
+									<tr>
+										<td>35</td>
+										<td>BluGold Basketball Package</td>
+									</tr>
+									<tr>
+										<td>36</td>
+										<td>BluGold Cross Country/Sandbar and Grill Prize Package</td>
+									</tr>
+									<tr>
+										<td>37</td>
+										<td>BluGold Volleyball/Sandbar and Grill Prize Package</td>
+									</tr>
+									<tr>
+										<td>38</td>
+										<td>BluGold Basketball Package</td>
+									</tr>
+									<tr>
+										<td>39</td>
+										<td>Gift Certificate - The Edge</td>
+									</tr>
+								</tbody>
+							</table>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<br />
-		<!-- BREAK -->
-		<br />
-		<!-- BREAK -->
-
 	</div>
-	<!-- #container -->
-	</div>
-	<!-- #wrapper class -->
 	<br />
 	<!-- BREAK -->
 	<br />
 	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
-	<br />
-	<!-- BREAK -->
-	</section>
+
+</div>
+<!-- #container -->
+</div>
+<!-- #wrapper class -->
+<br />
+<!-- BREAK -->
+<br />
+<!-- BREAK -->
+<br />
+<!-- BREAK -->
+<br />
+<!-- BREAK -->
+</section>
 
 
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="/js/boostrap-media-lightbox.min.js"></script>
-	<script src="/js/boostrap-media-lightbox.js"></script>
-	<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-	</div>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="/js/boostrap-media-lightbox.min.js"></script>
+<script src="/js/boostrap-media-lightbox.js"></script>
+<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
+</div>
 </body>
 
 <footer>
