--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
 					<span class="menuTrigger" id="hamburger-one">
-						<span class="mainLine"></span>
-					</span>
+							<span class="mainLine"></span>
+						</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
 					<img alt="logo" src="images/logo.png" />
@@ -86,15 +86,29 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
-							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
-								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
-									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+							<img src="images/twitter.png" class="twitter" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
+						</a>
+					</li>
+					<li>
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+              <img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
+            </a>
+					</li>
+				</ul>
 			</div>
-			<!-- /.container -->
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container -->
 	</nav>
 </head>
 
